--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,22 @@
   font-style: normal;
 }
 
+html,
 body {
   background-color: #d5e1ef;
   overflow-y: hidden;
   font-family: Outfit, sans-serif;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
   background-color: #fff;
   padding: 16px;
-  margin: 5% auto;
   width: 320px;
   display: flex;
   flex-direction: column;
@@ -58,17 +64,5 @@ img {
     line-height: 1.4;
     text-align: center;
     margin: 0px;
-  }
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  position: fixed;
-  bottom: 4px;
-  margin: 0 auto;
-
-  a {
-    color: hsl(228, 45%, 44%);
   }
 }
